--- a/mmopy_client/src/index.css
+++ b/mmopy_client/src/index.css
@@ -1,5 +1,19 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+document, body, canvas {
+	padding: 0;
+	margin: 0;
 }
+
+body {
+	background-color: black;
+	display: flex;
+	align-items: center;
+	height: 100vh;
+}
+
+.App {
+  width: 100vw;
+}
+
+#canvas {
+}
+
